--- a/src/app/shared/component/alert/alert.component.html
+++ b/src/app/shared/component/alert/alert.component.html
@@ -2,5 +2,5 @@
   <button type="button" class="close" aria-label="Close" (click)="closeAlert()">
     <span aria-hidden="true">&times;</span>
   </button>
-  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+  <strong>Hello Wajdi</strong> Test Test Test
 </div>
