--- a/src/app/shared/component/alert/alert.component.html
+++ b/src/app/shared/component/alert/alert.component.html
@@ -1,6 +1,6 @@
-<div #alert class="alert alert-warning alert-dismissible fade show" role="alert">
+<div #alert class="alert alert-warning alert-dismissible fade" role="alert">
   <button type="button" class="close" aria-label="Close" (click)="closeAlert()">
     <span aria-hidden="true">&times;</span>
   </button>
-  <strong>Hello Wajdi</strong> Test Test Test
+  <strong #title></strong> : <span #message></span>
 </div>
