set alert , messages and types

--- a/src/app/shared/component/alert/alert.component.html
+++ b/src/app/shared/component/alert/alert.component.html
@@ -1,4 +1,4 @@
-<div #alert class="alert alert-warning alert-dismissible fade" role="alert">
+<div #alert class="alert alert-dismissible fade" role="alert">
   <button type="button" class="close" aria-label="Close" (click)="closeAlert()">
     <span aria-hidden="true">&times;</span>
   </button>
