set register form

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -1,3 +1,60 @@
-<p>
-  register works!
-</p>
+<mat-card class="register-card">
+  <mat-card-content>
+    <mat-card-header>
+      <div class=""></div>
+      <mat-card-title>Register</mat-card-title>
+      <mat-card-subtitle>Register</mat-card-subtitle>
+    </mat-card-header>
+    <form class="">
+      <mat-grid-list cols="2" rowHeight="3:1">
+        <mat-grid-tile>
+          <mat-form-field class="field">
+            <input
+              matInput
+              type="text"
+              placeholder="Firstname"
+            /> </mat-form-field
+        ></mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="">
+            <input
+              type="text"
+              matInput
+              placeholder="Lastname"
+            /> </mat-form-field
+        ></mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="">
+            <input type="email" matInput placeholder="Email" /> </mat-form-field
+        ></mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="">
+            <input
+              type="number"
+              matInput
+              placeholder="Phone"
+            /> </mat-form-field
+        ></mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="">
+            <input type="password" matInput placeholder="Password" />
+          </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-form-field class="">
+            <input
+              type="password"
+              matInput
+              placeholder="Confirm Password"
+            /> </mat-form-field
+        ></mat-grid-tile>
+        <mat-grid-tile>
+            
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <button mat-raised-button color="primary">Register</button>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </form>
+  </mat-card-content>
+</mat-card>
