--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,2 +1,26 @@
-<app-login></app-login>
-<app-register></app-register>
+<div class="accordion">
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Login
+        </mat-panel-title>
+        <mat-panel-description>
+          Login Here
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <app-login></app-login>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Register
+        </mat-panel-title>
+        <mat-panel-description>
+          Register Here
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <app-register></app-register>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
