--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -2,22 +2,19 @@
   <mat-accordion>
     <mat-expansion-panel>
       <mat-expansion-panel-header>
-        <mat-panel-title>
-          Login
-        </mat-panel-title>
+        <mat-panel-title> </mat-panel-title>
         <mat-panel-description>
-          Login Here
+          <span>Login</span>
         </mat-panel-description>
       </mat-expansion-panel-header>
       <app-login></app-login>
     </mat-expansion-panel>
+
     <mat-expansion-panel>
       <mat-expansion-panel-header>
-        <mat-panel-title>
-          Register
-        </mat-panel-title>
+        <mat-panel-title> </mat-panel-title>
         <mat-panel-description>
-          Register Here
+          <span>Register</span>
         </mat-panel-description>
       </mat-expansion-panel-header>
       <app-register></app-register>
