--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -2,3 +2,9 @@
     width: 50%;
     margin: auto;
 }
+
+span {
+    font-family: "Courier New", Courier, monospace;
+    font-size: large;
+    font-weight: bolder;
+}
