--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -15,7 +15,7 @@
               placeholder="Firstname"
               formControlName="firstName"
             />
-            <mat-error *ngIf="firstName.invalid"
+            <mat-error *ngIf="firstName.dirty && firstName.invalid"
               >{{ getFieldError(firstName.errors) }}</mat-error
             >
           </mat-form-field>
@@ -29,7 +29,7 @@
               placeholder="Lastname"
               formControlName="lastName"
             />
-            <mat-error *ngIf="lastName.invalid"
+            <mat-error *ngIf="lastName.dirty && lastName.invalid"
               >{{ getFieldError(lastName.errors) }}</mat-error
             >
           </mat-form-field>
@@ -43,7 +43,7 @@
               placeholder="Email"
               formControlName="email"
             />
-            <mat-error *ngIf="email.invalid"
+            <mat-error *ngIf="email.dirty && email.invalid"
               >{{ getFieldError(email.errors) }}</mat-error
             >
           </mat-form-field>
@@ -58,7 +58,7 @@
               placeholder="Phone"
               formControlName="phone"
             />
-            <mat-error *ngIf="phone.invalid"
+            <mat-error *ngIf="phone.dirty && phone.invalid"
               >{{ getFieldError(phone.errors) }}</mat-error
             >
           </mat-form-field>
@@ -72,11 +72,8 @@
               placeholder="Password"
               formControlName="password"
             />
-            <mat-error *ngIf="password.invalid"
+            <mat-error *ngIf="password.touched && password.invalid"
               >{{ getFieldError(password.errors) }}</mat-error
-            >
-            <mat-error *ngIf="form.invalid"
-              >Bad</mat-error
             >
           </mat-form-field>
         </mat-grid-tile>
@@ -89,11 +86,11 @@
               placeholder="Confirm Password"
               formControlName="confirmPassword"
             />
-            <mat-error *ngIf="confirmPassword.invalid"
+            <mat-error *ngIf="confirmPassword.touched && confirmPassword.invalid"
               >{{ getFieldError(confirmPassword.errors) }}</mat-error
             >
-            <mat-error *ngIf="form.valid"
-              >Whattttt ???</mat-error
+            <mat-error *ngIf="!form.errors?.matchPassword"
+              >Les mots de passes ne sont pas identique</mat-error
             >
           </mat-form-field>
         </mat-grid-tile>
