--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -1,35 +1,4 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* style the container */
-.container {
-  position: relative;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px 0 30px 0;
-}
-
-/* style inputs and link buttons */
-input,
-.btn {
+.login-card {
   width: 100%;
-  padding: 12px;
-  border: none;
-  border-radius: 4px;
-  margin: 5px 0;
-  opacity: 0.85;
-  display: inline-block;
-  font-size: 17px;
-  line-height: 20px;
-  text-decoration: none; /* remove underline from anchors */
-}
-
-/* Two-column layout */
-.col {
-  float: left;
-  width: 50%;
   margin: auto;
-  padding: 0 50px;
-  margin-top: 6px;
 }
