--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -17,6 +17,11 @@
 <mat-card class="main-panel">
   <mat-tab-group>
     <mat-tab label="News">
+      <mat-card class="settings"
+        ><button class="my-fab" mat-mini-fab color="primary">
+          <mat-icon>post_add</mat-icon>
+        </button></mat-card
+      >
       <app-post *ngFor="let post of posts$ | async"></app-post>
     </mat-tab>
     <mat-tab label="Second"> Content 2 </mat-tab>
