add post dialog

--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -18,7 +18,12 @@
   <mat-tab-group>
     <mat-tab label="News">
       <mat-card class="settings"
-        ><button class="my-fab" mat-mini-fab color="primary">
+        ><button
+          class="my-fab"
+          mat-mini-fab
+          color="primary"
+          (click)="newPost()"
+        >
           <mat-icon>post_add</mat-icon>
         </button></mat-card
       >
