--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -27,7 +27,7 @@
           <mat-icon>post_add</mat-icon>
         </button></mat-card
       >
-      <app-post *ngFor="let post of posts$ | async"></app-post>
+      <app-post [post]="post" *ngFor="let post of posts$ | async"></app-post>
     </mat-tab>
     <mat-tab label="Second"> Content 2 </mat-tab>
     <mat-tab label="Third"> Content 3 </mat-tab>
