--- a/src/app/modules/profile/post/modal/new-post/new-post.component.scss
+++ b/src/app/modules/profile/post/modal/new-post/new-post.component.scss
@@ -1,4 +1,10 @@
-textarea {
-  width: 100%;
-  height: 100%;
+.post-spinner {
+  position: fixed;
+  left: 45%;
+  top: 45%;
+}
+
+.loading {
+  background-color: rgba(214, 229, 235, 0.945);
+  pointer-events: none;
 }
