--- a/src/app/modules/profile/post/post.component.scss
+++ b/src/app/modules/profile/post/post.component.scss
@@ -5,6 +5,25 @@
 }
 
 .post-image {
+  border: solid 1px #cad3dc;
+}
+
+.post-text {
+  margin: 1% !important;
+  height: 50% !important;
+}
+
+.image-resize {
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto !important;
   width: auto;
-  height: auto;
+}
+
+.text-resize {
+  margin: 1%;
+  height: 100%;
+  white-space: break-spaces;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
