--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -25,24 +25,37 @@
         <button class="my-fab" mat-mini-fab color="primary" (click)="newPost()">
           <mat-icon>post_add</mat-icon>
         </button>
-        <mat-form-field class="search">
-          <input type="text"
-                 placeholder="Search"
-                 matInput
-                 #search
-                 (keyup)="searchPost($event.target.value)"
-                 [matAutocomplete]="auto">
-          <mat-autocomplete #auto="matAutocomplete">
-            <mat-option class="search-title" *ngFor="let post of searchPosts$ | async" [value]="post">
-              <span [innerHTML]="post.data.title | highlight: search.value"></span>
-            </mat-option>
-          </mat-autocomplete>
-          <mat-icon matSuffix>search</mat-icon>
-        </mat-form-field>
+        <form class="search" [formGroup]="searchForm">
+          <mat-form-field>
+            <input
+              type="text"
+              placeholder="Search"
+              matInput
+              formControlName="searchField"
+              #search
+              [matAutocomplete]="auto"
+            />
+            <mat-progress-bar
+              class="input-progress"
+              *ngIf="progress"
+              mode="indeterminate"
+            ></mat-progress-bar>
+            <mat-autocomplete #auto="matAutocomplete">
+              <mat-option
+                class="search-title"
+                *ngFor="let post of searchPosts$ | async"
+                [value]="post.data.title"
+              >
+                <span
+                  [innerHTML]="post.data.title | highlight: search.value"
+                ></span>
+              </mat-option>
+            </mat-autocomplete>
+            <mat-icon matSuffix>search</mat-icon>
+          </mat-form-field>
+        </form>
       </mat-card>
       <app-post [post]="post" *ngFor="let post of posts$ | async"></app-post>
     </mat-tab>
-    <mat-tab label="Second"> Content 2 </mat-tab>
-    <mat-tab label="Third"> Content 3 </mat-tab>
   </mat-tab-group>
 </mat-card>
