--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -15,9 +15,9 @@
               placeholder="Firstname"
               formControlName="firstName"
             />
-            <mat-error *ngIf="firstName.dirty && firstName.invalid"
-              >{{ getFieldError(firstName.errors) }}</mat-error
-            >
+            <mat-error *ngIf="firstName.dirty && firstName.invalid">{{
+              getFieldError(firstName.errors)
+            }}</mat-error>
           </mat-form-field>
         </mat-grid-tile>
 
@@ -29,9 +29,9 @@
               placeholder="Lastname"
               formControlName="lastName"
             />
-            <mat-error *ngIf="lastName.dirty && lastName.invalid"
-              >{{ getFieldError(lastName.errors) }}</mat-error
-            >
+            <mat-error *ngIf="lastName.dirty && lastName.invalid">{{
+              getFieldError(lastName.errors)
+            }}</mat-error>
           </mat-form-field>
         </mat-grid-tile>
 
@@ -43,9 +43,9 @@
               placeholder="Email"
               formControlName="email"
             />
-            <mat-error *ngIf="email.dirty && email.invalid"
-              >{{ getFieldError(email.errors) }}</mat-error
-            >
+            <mat-error *ngIf="email.dirty && email.invalid">{{
+              getFieldError(email.errors)
+            }}</mat-error>
           </mat-form-field>
         </mat-grid-tile>
 
@@ -58,9 +58,9 @@
               placeholder="Phone"
               formControlName="phone"
             />
-            <mat-error *ngIf="phone.dirty && phone.invalid"
-              >{{ getFieldError(phone.errors) }}</mat-error
-            >
+            <mat-error *ngIf="phone.dirty && phone.invalid">{{
+              getFieldError(phone.errors)
+            }}</mat-error>
           </mat-form-field>
         </mat-grid-tile>
 
@@ -72,9 +72,9 @@
               placeholder="Password"
               formControlName="password"
             />
-            <mat-error *ngIf="password.touched && password.invalid"
-              >{{ getFieldError(password.errors) }}</mat-error
-            >
+            <mat-error *ngIf="password.touched && password.invalid">{{
+              getFieldError(password.errors)
+            }}</mat-error>
           </mat-form-field>
         </mat-grid-tile>
 
