--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,10 +1,10 @@
 .accordion {
-    width: 600px;
-    margin-left: 400px;
+  width: 600px;
+  margin-left: 400px;
 }
 
 span {
-    font-family: "Courier New", Courier, monospace;
-    font-size: large;
-    font-weight: bolder;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  font-weight: bolder;
 }
