--- a/src/app/modules/profile/post/modal/new-post/new-post.component.html
+++ b/src/app/modules/profile/post/modal/new-post/new-post.component.html
@@ -38,9 +38,7 @@
         >
           <mat-icon>clear</mat-icon>
         </button>
-        <mat-error *ngIf="image"
-              >{{ getFieldError(image.errors) }}</mat-error
-            >
+        <mat-error *ngIf="image">{{ getFieldError(image.errors) }}</mat-error>
       </mat-form-field>
     </mat-grid-tile>
     <mat-grid-tile [colspan]="1" [rowspan]="1">
